--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 set(PROJECT_IMPLEMENTATIONS
   src/FFMPEG.cpp
+  src/FileSource.cpp
+  src/Hyperwall.cpp
 )
 
 # This project
@@ -13,6 +15,6 @@ include_directories(include)
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 
-add_executable(sender src/sender.cpp ${PROJECT_IMPLEMENTATIONS})
+add_executable(sender src/Sender.cpp ${PROJECT_IMPLEMENTATIONS})
 
 target_link_libraries(sender ${OpenCV_LIBS})
