--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: install dependencies
-        run: sudo apt install cmake
+        run: sudo apt install cmake g++-13
       - name: setup gcc
         uses: egor-tensin/setup-gcc@v1
         with:
