--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,12 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: install dependencies
-        run: sudo apt-get update && sudo apt-get -y install cmake g++-13
-      - name: setup gcc
-        uses: egor-tensin/setup-gcc@v1
-        with:
-          version: latest
-          platform: x64
+        run: sudo apt-get update && sudo apt-get -y install cmake g++-13 && which g++-13
       - uses: actions/cache@v4
         with:
           path: build
