--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - name: install dependencies
-        run: sudo apt-get update && sudo apt-get -y install cmake
+        run: sudo apt-get update && sudo apt-get -y install cmake libopencv-dev
       - uses: actions/cache@v4
         with:
           path: build
