--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,9 @@ project(hyperwall)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 set(PROJECT_IMPLEMENTATIONS
-  src/FFmpeg.cpp
-  src/FileSource.cpp
-  src/Hyperwall.cpp
+    src/FFmpeg.cpp
+    src/FileSource.cpp
+    src/Hyperwall.cpp
 )
 
 # This project
@@ -16,6 +16,17 @@ include_directories(include)
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 
+# argparse
+include(FetchContent)
+FetchContent_Declare(
+    argparse
+    GIT_REPOSITORY https://github.com/p-ranav/argparse.git
+)
+FetchContent_MakeAvailable(argparse)
+
 add_executable(sender src/Sender.cpp ${PROJECT_IMPLEMENTATIONS})
 
-target_link_libraries(sender ${OpenCV_LIBS})
+target_link_libraries(sender 
+    ${OpenCV_LIBS}
+    argparse
+)
