--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,9 @@ project(hyperwall)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 set(PROJECT_IMPLEMENTATIONS
-    src/FFmpeg.cpp
-    src/Sources.cpp
-    src/Hyperwall.cpp
+    src/impl/FFmpeg.cpp
+    src/impl/Sources.cpp
+    src/impl/Hyperwall.cpp
 )
 set(CMAKE_CXX_FLAGS "-O3")
 
@@ -31,3 +31,4 @@ target_link_libraries(sender
     ${OpenCV_LIBS}
     argparse
 )
+
