--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -24,3 +24,5 @@ jobs:
         run: cmake -B build && cmake --build build -j4
         env:
             CXX: g++-13
+      - name: test
+        run: ctest --test-dir build
